# TwinPaths

./: .gitignore  DPGC_heuristic.py  README.md  graphs.py  ground_truth_calculation.py  ground_truth_calculation_example.py  matroid_dpt.py  pyproject.toml  requirements.txt
data/example_graphs/: abilene.pkl  brain.pkl  cost266.pkl  di-yuan.pkl  geant.pkl  india35.pkl  janos-us-ca.pkl  nobel-us.pkl  norway.pkl  pdh.pkl  sun.pkl  ta1.pkl  ta2.pkl  zib54.pkl
docs/: algorithm_analysis.md
example_graphs/: atlanta.pkl  dfn-bwin.pkl  dfn-gwin.pkl  france.pkl  germany50.pkl  giul39.pkl  janos-us.pkl  newyork.pkl  nobel-eu.pkl  nobel-germany.pkl  pioro40.pkl  polska.pkl
experiments/: __init__.py  batch_run_algorithms.py  benchmark_accuracy.py  benchmark_statistical.py  compare_algorithms.py  create_presentation.py
scripts/: setup_venv.ps1
twinpaths/: __init__.py
twinpaths/graphs/: __init__.py  generate_graphs.py  graph_sources.py
twinpaths/solvers/: DPGC_heuristic.py  __init__.py  ground_truth.py  matroid_dpt.py
twinpaths/viz/: __init__.py  dpgc_full_animation.py
utils/: dpgc_full_animation.py  visualize.py  visualize_pyvis.py
