[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "twinpaths"
version = "0.1.0"
description = "Algorithms for the k=2 Survivable Network Design problem (DPT/DPST)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pyvis>=0.3.2",
]

[project.optional-dependencies]
# Only needed for the Manim animation in twinpaths/viz/dpgc_full_animation.py
anim = ["manim>=0.18"]
# Only needed for experiments/create_presentation.py
slides = ["python-pptx>=0.6"]

[tool.setuptools]
packages = ["twinpaths", "twinpaths.solvers", "twinpaths.graphs", "twinpaths.viz"]
